package tdx;

message Zmq {
    enum Type {
        PUB = 1;
        SUB = 2;
        REQ = 3;
        REP = 4;
    }
    required Type type = 1;
    required string address = 2;
    repeated string topic = 3;
}

message TradeConfig {
    optional Zmq market_pub = 1;
    optional Zmq order_sub = 2;
    optional Zmq order_pub = 3;

    optional string universe_file = 4;
    repeated string md_servers = 5;
    optional string trade_server = 6;

	optional string funding_account = 7;
	optional string sh_account = 8;
	optional string sz_account = 9;
	optional string trade_passwd = 10;
	optional string communicate_passwd = 11;

	optional string am_open = 12;
	optional string am_close = 13;
	optional string pm_open = 14;
	optional string pm_close = 15;

	optional string ddb = 16;
	optional string trade_start = 17;
	optional string trade_stop = 18;
	optional string post_trade = 19;
	optional string exit_time = 20;
}